# renderdoc-tool-set

./: .gitattributes  .gitignore  README.md  install.ps1  pyproject.toml
mcp_server/: config.py  presets.py  server.py
mcp_server/bridge/: client.py  manager.py
rdc_cli/: __init__.py  main.py  output.py
rdc_core/: __init__.py  executor.py  formatters.py  operations.py  registry.py
renderdoc_extension/: __init__.py  extension.json  renderdoc_facade.py  request_handler.py  settings.py  socket_server.py
renderdoc_extension/services/: __init__.py  action_service.py  capture_manager.py  diagnostic_service.py  pipeline_service.py  resource_service.py
renderdoc_extension/utils/: serializers.py
scripts/: clean_cache.py  install_extension.py
skills/rdc/: SKILL.md
