[project]
name = "renderdoc_toolset"
version = "1.0.0"
description = "Renderdoc tool set for AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
renderdoc_toolset = "mcp_server.server:main"
renderdoc-cli = "rdc_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "rdc_core", "rdc_cli"]

[tool.uv]
package = true

[dependency-groups]
dev = []
